--- a/app/src/main/res/layout/garage_card.xml
+++ b/app/src/main/res/layout/garage_card.xml
@@ -1,71 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
     android:layout_margin="6dp"
-    android:minHeight="72dp"
+    android:minHeight="120dp"
     android:padding="4dp"
     card_view:cardCornerRadius="3dp"
     card_view:cardElevation="4dp"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardUseCompatPadding="true"
+    >
 
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/garage_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="TextView"
-            android:textAllCaps="true"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+        <RelativeLayout
+            android:layout_width="0.0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.2">
 
-        <TextView
-            android:id="@+id/garage_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/garage_title"
-            android:text="TextView"
-            android:layout_marginTop="8dp"
-            android:textSize="14sp"
-             />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
 
-        <com.daimajia.numberprogressbar.NumberProgressBar
-            android:id="@+id/garage_progress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-
-            custom:progress_reached_bar_height="4dp"
-            custom:progress_reached_color="@color/capacity_normal"
-
-            custom:progress_text_color="#3498DB"
-            custom:progress_text_offset="1dp"
-
-            custom:progress_text_size="12sp"
-            custom:progress_text_visibility="visible"
-            custom:progress_unreached_bar_height="2dp"
-            custom:progress_unreached_color="#CCCCCC"
+                <TextView
+                    android:id="@+id/garage_free_spots"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:text="900"
+                    android:textSize="26dp"
+                    android:textStyle="bold"/>
 
 
-            />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/garage_free_spots"
+                    android:layout_centerHorizontal="true"
+                    android:padding="0dp"
+                    android:text="vrij"
+                    android:textSize="16sp"/>
 
 
-    </RelativeLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="#4f000000"
+                />
+
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.8"
+            android:padding="8dp">
+
+            <TextView
+                android:id="@+id/garage_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:text="TextView"
+                android:textColor="@color/dark_text"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/garage_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/garage_title"
+                android:layout_marginTop="4dp"
+                android:text="TextView"
+                android:textSize="14sp"/>
+
+
+            <com.daimajia.numberprogressbar.NumberProgressBar
+                android:id="@+id/garage_progress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/garage_message"
+                android:layout_marginTop="12dp"
+                custom:progress_reached_bar_height="4dp"
+                custom:progress_reached_color="@color/capacity_normal"
+                custom:progress_text_color="#3498DB"
+                custom:progress_text_offset="1dp"
+                custom:progress_text_size="14sp"
+                custom:progress_text_visibility="visible"
+                custom:progress_unreached_bar_height="2dp"
+                custom:progress_unreached_color="#CCCCCC"
+
+
+                />
+
+            <TextView
+                android:id="@+id/garage_update"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/garage_progress"
+                android:layout_marginTop="4dp"
+                android:text="Laatste update:"
+                android:textColor="#CCCCCC"
+                android:textSize="10sp"/>
+
+
+        </RelativeLayout>
+    </LinearLayout>
 </android.support.v7.widget.CardView>
