--- a/app/src/main/res/layout/garage_card.xml
+++ b/app/src/main/res/layout/garage_card.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="6dp"
-    android:minHeight="120dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
     android:padding="4dp"
+    card_view:cardBackgroundColor="#ffffff"
     card_view:cardCornerRadius="3dp"
     card_view:cardElevation="4dp"
-    card_view:cardUseCompatPadding="true"
-    >
+    card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:orientation="horizontal">
 
         <RelativeLayout
-            android:layout_width="0.0dp"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="0.2">
 
@@ -39,20 +39,21 @@
                     android:id="@+id/garage_free_spots"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_bold"
                     android:padding="0dp"
                     android:text="900"
-                    android:textSize="26dp"
-                    android:textStyle="bold"/>
+                    android:textSize="26sp"
+                    android:textStyle="bold" />
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/garage_free_spots"
-                    android:layout_centerHorizontal="true"
+                    android:fontFamily="@font/montserrat"
                     android:padding="0dp"
                     android:text="vrij"
-                    android:textSize="16sp"/>
+                    android:textColor="@color/dark_text"
+                    android:textSize="12sp" />
 
 
             </LinearLayout>
@@ -61,10 +62,9 @@
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
-                android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                android:background="#4f000000"
-                />
+                android:layout_marginBottom="8dp"
+                android:background="#4f000000" />
 
 
         </RelativeLayout>
@@ -72,9 +72,9 @@
 
         <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="0.8"
-            android:padding="8dp">
+            android:padding="4dp">
 
             <TextView
                 android:id="@+id/garage_title"
@@ -82,20 +82,22 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="TextView"
                 android:textColor="@color/dark_text"
                 android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/garage_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_below="@+id/garage_title"
-                android:layout_marginTop="4dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="2dp"
+                android:fontFamily="@font/montserrat"
                 android:text="TextView"
-                android:textSize="14sp"/>
+                android:textSize="12sp" />
 
 
             <com.daimajia.numberprogressbar.NumberProgressBar
@@ -103,31 +105,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/garage_message"
-                android:layout_marginTop="12dp"
-                custom:progress_reached_bar_height="4dp"
-                custom:progress_reached_color="@color/capacity_normal"
-                custom:progress_text_color="#3498DB"
-                custom:progress_text_offset="1dp"
-                custom:progress_text_size="14sp"
-                custom:progress_text_visibility="visible"
-                custom:progress_unreached_bar_height="2dp"
-                custom:progress_unreached_color="#CCCCCC"
+                android:layout_centerHorizontal="true"
+                custom:progress_text_color="@color/dark_text"
+
+                android:layout_marginTop="11dp" />
 
 
-                />
+            <!--custom:progress_reached_bar_height="4dp"-->
+            <!--custom:progress_reached_color="@color/capacity_normal"-->
+            <!--custom:progress_text_color="#3498DB"-->
+            <!--custom:progress_text_offset="1dp"-->
+            <!--custom:progress_text_size="14sp"-->
+            <!--custom:progress_text_visibility="visible"-->
+            <!--custom:progress_unreached_bar_height="2dp"-->
+            <!--custom:progress_unreached_color="#FFCCCCCC"-->
 
             <TextView
                 android:id="@+id/garage_update"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_below="@+id/garage_progress"
+                android:layout_alignParentEnd="true"
                 android:layout_marginTop="4dp"
+                android:fontFamily="@font/montserrat"
                 android:text="Laatste update:"
-                android:textColor="#CCCCCC"
-                android:textSize="10sp"/>
+                android:textColor="@color/dark_text"
+                android:textSize="10sp" />
 
 
         </RelativeLayout>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
